--- a/huhu.html
+++ b/huhu.html
@@ -149,10 +149,10 @@
     </style>
 </head>
 <body>
-    <h1>🎉 Happy Birthday, Husni! 🎉</h1>
-    <p>Click the button below to reveal your surprise!</p>
-    <button onclick="revealSurprise()">Reveal Surprise</button>
-    <p id="message">You are the most amazing person, and I feel so lucky to celebrate your special day with you. Love you always, Najwa ❤️</p>
+    <h1>🎉 Kapla High Council, Husni! 🎉</h1>
+    <p>Jeng Jeng Jeng</p>
+    <button onclick="revealSurprise()">Tekan jangan tak tekan</button>
+    <p id="message">Happy 24th birthday bubs. You are an amazing person and god knows how a good person you are. I am sorry but I hope this cheers you up :) </p>
 
     <!-- Floating Particles -->
     <div class="particle particle-1" style="top: 10%; left: 10%;"></div>
